// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should render as skeleton 1`] = `
.c0 {
  width: 400px;
  height: 400px;
}

.c1 {
  height: 100%;
  width: 100%;
  background-color: #f9f9f9;
  border-radius: 3px;
  position: relative;
  padding: 0;
  box-shadow: none;
  pointer-events: none;
}

.c1:hover,
.c1:focus,
.c1:active {
  border: none;
  cursor: default;
  outline: none;
}

.c1::before {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-animation: 3000ms ease-in-out dQLxgQ infinite;
  animation: 3000ms ease-in-out dQLxgQ infinite;
  background-color: #f3f3f3;
  border-radius: 3px;
  content: '';
}

<div>
  <div
    class="c0"
    height="400"
    type="box"
    width="400"
  >
    <div
      class="c1"
    />
  </div>
</div>
`;

exports[`Image should render with defined props 1`] = `
.c0 {
  display: block;
  height: 400px;
  width: 400px;
  position: relative;
  background-color: none;
}

.c1 > * {
  object-fit: cover;
  height: 100%;
  width: 100%;
  object-position: 50% 50%;
}

.c2 {
  opacity: 0;
}

<div>
  <div
    class="c0 c1"
    height="400px"
    width="400px"
  >
    <img
      class="c2"
      height="100%"
      opacity="0"
      src="https://piste-ui.s3.us-west-2.amazonaws.com/ski.jpg"
      width="100%"
    />
    
  </div>
</div>
`;

exports[`Image should render with preview 1`] = `
.c0 {
  display: block;
  height: 400px;
  width: 400px;
  position: relative;
  background-color: none;
}

.c1 > * {
  object-fit: cover;
  height: 100%;
  width: 100%;
  object-position: 50% 50%;
}

.c3 {
  position: absolute;
  left: 0px;
  top: 0px;
  -webkit-filter: blur(5px);
  filter: blur(5px);
  opacity: 1;
  -webkit-transition: opacity ease-in 200ms;
  transition: opacity ease-in 200ms;
  -webkit-clip-path: inset(0);
  clip-path: inset(0);
}

.c2 {
  opacity: 0;
}

<div>
  <div
    class="c0 c1"
    height="400px"
    width="400px"
  >
    <img
      class="c2"
      height="100%"
      opacity="0"
      src="https://piste-ui.s3.us-west-2.amazonaws.com/ski.jpg"
      width="100%"
    />
    <img
      class="c3"
      height="100%"
      opacity="1"
      src="https://piste-ui.s3.us-west-2.amazonaws.com/ski--thumbnail.jpg"
      width="100%"
    />
  </div>
</div>
`;
